# ForgeINT

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: .gitignore  build.gradle.kts  google-services.json  proguard-rules.pro
app/forgeint_phone/: build.gradle.kts
app/forgeint_phone/release/: output-metadata.json
app/forgeint_phone/release/baselineProfiles/0/: forgeint_phone-release.dm
app/forgeint_phone/release/baselineProfiles/1/: forgeint_phone-release.dm
app/forgeint_phone/src/androidTest/java/com/example/forgeint_phone/: ExampleInstrumentedTest.kt
app/forgeint_phone/src/main/: AndroidManifest.xml
app/forgeint_phone/src/main/java/com/example/forgeint_phone/: MainActivity.kt  PhoneDataLayerService.kt  RemoteRequest.kt
app/forgeint_phone/src/main/java/com/example/forgeint_phone/data/: ChatDatabse.kt  CustomPersonaRepository.kt  PersonaRepository.kt  SettingsContracts.kt  SettingsManager.kt  UserTraits.kt
app/forgeint_phone/src/main/java/com/example/forgeint_phone/domain/: LocalInferenceEngine.kt  Personas.kt
app/forgeint_phone/src/main/java/com/example/forgeint_phone/presentation/: AttachmentModels.kt  CreatePersonaScreen.kt  GeminiViewModel.kt  MemoryRetrievalEngine.kt  RichTextFormatter.kt  Screens.kt
app/forgeint_phone/src/main/java/com/example/forgeint_phone/ui/theme/: Color.kt  Theme.kt  Type.kt
app/forgeint_phone/src/main/res/values/: strings.xml  themes.xml
app/forgeint_phone/src/test/java/com/example/forgeint_phone/: ExampleUnitTest.kt
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/example/forgeint/presentation/: RichTextFormatterBenchmark.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ai.cpp  forgeint.cpp  native-libs.cpp
app/src/main/java/: Personas.kt
app/src/main/java/com/example/forgeint/: ForgeClient.kt  RemoteRequest.kt
app/src/main/java/com/example/forgeint/data/: CustomPersonaRepository.kt
app/src/main/java/com/example/forgeint/mlmath/: gradientDescent.kt
app/src/main/java/com/example/forgeint/presentation/: ChatDatabse.kt  ContextPruner.kt  CreatePersonaScreen.kt  GeminiViewmodel.kt  HardwareAPI.kt  HardwareTileService.kt  LastChatTile.kt  LocalInferenceEngine.kt  LocalModelScreen.kt  MainActivity.kt  MemoryRetrievalEngine.kt  NetworkIndicator.kt  PersonaSettings.kt  PhoneCommunicator.kt  RemoteCommandScreen.kt  RemoteControlIPSelectionScreen.kt  RichTextFormatter.kt  Screens.kt  SettingsContracts.kt  SettingsManager.kt  SettingsScreen.kt  UserTraits.kt  VoiceChatTileService.kt  VoiceInput.kt
app/src/main/java/com/example/forgeint/presentation/theme/: Theme.kt
app/src/main/res/drawable/: ic_tile_mic.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/forgeint/data/: EndpointSettingsTest.kt
app/src/test/java/com/example/forgeint/presentation/: ForgeHardwareViewModelTest.kt  MainDispatcherRule.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
